--- a/header.css
+++ b/header.css
@@ -15,3 +15,14 @@
 .container__titulo, .container__frase{
     display: none;
 }
+
+@media screen and (min-width: 820px) {
+    .container__titulo, .container__titulo--negrito {
+        font-size: 30px;
+    }
+
+    .container__titulo {
+        font-weight: 400;
+        display: block;
+    }
+}
