--- a/header.css
+++ b/header.css
@@ -26,3 +26,11 @@
         display: block;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .container__frase{
+        padding-left: 5em;
+        font-size: 20px;
+        display: block;
+    }
+}
