--- a/header.css
+++ b/header.css
@@ -1,4 +1,6 @@
-.cabecalho{
+.cabecalho{background-color: var(--cor-cabecalho);
+    padding: 1em;
+ 
     background-color: var(--cor-cabecalho);
     padding: 1em;
 }
