--- a/header.css
+++ b/header.css
@@ -1,6 +1,6 @@
-.cabecalho{background-color: var(--cor-cabecalho);
+.cabecalho {
+    background-color: var(--cor-cabecalho);
     padding: 1em;
- 
 }
 
 .container {
@@ -12,23 +12,24 @@
     padding: 1em;
 }
 
-.container__titulo, .container__frase{
+.container__titulo, .container__frase {
     display: none;
 }
 
 @media screen and (min-width: 820px) {
-    .container__titulo, .container__titulo--negrito {
-        font-size: 30px;
-    }
-
     .container__titulo {
+        font-size: 30px;
         font-weight: 400;
         display: block;
+    }
+    
+    .container__titulo--negrito {
+        /* Adicione estilos específicos aqui, se necessário */
     }
 }
 
 @media screen and (min-width: 1024px) {
-    .container__frase{
+    .container__frase {
         padding-left: 5em;
         font-size: 20px;
         display: block;
