--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
-@import url(../trabalho-aula-5/styles.css);
+@import url(styles/header.css);
 
 :root{
-    --cor-de-fundo:#9949B4;
-    --cor-cabecalho: #ffffff;
+    --cor-de-fundo:   #9949B4;
+    --cor-cabecalho:   #FFFFFF;
 }
 
 body{
     background-color: var(--cor-de-fundo);
     margin: 0;
 }
-
 @media screen and (min-width: 820px) {
     .container__titulo, .container__titulo--negrito {
         font-size: 30px;
@@ -20,7 +19,9 @@ body{
         display: block;
     }
 }
-
+@media screen and (min-width: 820px) {
+    /* …propriedades css… */
+}
 @media screen and (min-width: 1024px) {
     .container__frase{
         padding-left: 5em;
