--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,27 @@
-@import url(styles/header.css);
+CSS
 
-:root{
-    --cor-de-fundo:   #9949B4;
-    --cor-cabecalho:   #FFFFFF;
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
 }
 
-body{
-    background-color: var(--cor-de-fundo);
-    margin: 0;
-}
-@media screen and (min-width: 820px) {
-    .container__titulo, .container__titulo--negrito {
-        font-size: 30px;
-    }
-
-    .container__titulo {
-        font-weight: 400;
-        display: block;
-    }
+.button:hover {
+    background-color: #45a049;
 }
 
-@media screen and (min-width: 1024px) {
-    .container__frase{
-        padding-left: 5em;
-        font-size: 20px;
-        display: block;
-    }
+.flashcard {
+    display: none; /* Inicialmente, todos os flashcards ficam invisíveis */
+}
+
+.flashcard.active {
+    display: block; /* Apenas o flashcard ativo fica visível */
 }
